add a picture uploader component.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -103,6 +103,10 @@ blockquote {
     &.small {
         width: 500px;
     }
+    &.max {
+       width: auto;
+       margin: 40px;
+    }
 }
 #modal-content {
     margin: 1em 0;
