--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -169,5 +169,18 @@
                 margin: 0 10px 10px;
             }
         }
+        .files-preview {
+            margin: 22px;
+            min-height: 180px;
+            background-color: @blog-code-bg;
+            border: 1px solid @blog-hr;
+            text-align: center;
+        }
+        p.helper {
+            margin: 20px auto;
+            font-style: italic;
+            text-align: center;
+        }
+
     }
 }
