--- a/src/less/librairy/palette.less
+++ b/src/less/librairy/palette.less
@@ -6,4 +6,5 @@
 @lib-panels-dragover-item-bg: #969696; // left panel dragove item background
 @lib-selected-thumb-border-color: #575757; // selected thumb border
 @lib-context-menu-hover-bg: #CCC; // contextual menu hove focus and active links
-
+@lib-file-uploader-bg:  rgba(0,0,0,0.04); // file uploader drop area background
+@lib-file-uploader-bg-hover: rgba(0,0,0,0.08); // file uploader drop area background on dragover
