--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -100,15 +100,18 @@
             margin: 0;
             line-height: 0em;
             &.selected {
-                padding: 1px;
                 border: 4px solid @lib-selected-thumb-border-color;
                 border-radius: 4px;
+                img {
+                    border: 1px solid #FFF;
+                }
             }
             img {
                 display: inline-block;
                 vertical-align: middle;
                 max-height: 100%;
                 max-width: 100%;
+                box-sizing: border-box;
             }
             footer {
                 text-align: right;
