add a form to create a portfolio.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -31,6 +31,7 @@
         border-right: 1px solid #CCC;
         background: @lib-panels-bg;
         box-sizing: border-box;
+        padding-bottom: 54px;
         h6 {
             margin: 20px 15px 8px;
             font-size: 14px;
