--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -25,6 +25,10 @@
 
 // forms
 @invalid-shadow: 0 0 3px #970000; // invalid form elements shadow
+@error: #970000; // Red
+@error-background: rgba(150, 0, 0, 0.08);   // form's error lists background
+@warning: #D69019;           // Orange
+@warning-background: rgba(214, 144, 25, 0.08);        // form's warning lists background
 @help-text: @blog-text; // help text color
 @inputs-bg: @blog-bg; // inputs (textarea, input etc.) background color
 @inputs-border: 1px solid #CCC; // inputs border
@@ -41,16 +45,3 @@
 @submit-button-hover-focus: #000; // submit and buttons :hover and :focus text color
 @submit-button-hover-focus-shadow: 0 0 3px #000; // submit and buttons :hover and :focus shadow
 @secondary-button-hover: #616161; // secondary submit buttons hover
-@valid: #3c763d; // valid
-@valid-border: @valid; // valid border
-//@valid-bg: #A1CDA1; // valid background
-@valid-bg: #dff0d8; // valid background
-//@invalid: #FF0000; // invalid test
-@invalid: #a94442; // invalid
-@invalid-border: @invalid; // invalid border
-//@invalid-bg: #FF6965; // invalid background
-@invalid-bg: #f2dede; // invalid background
-@warning: #8a6d3b; // warning color
-@warning-border: @warning; // warning border
-//@warning-bg: #FFCA6E; // warning background
-@warning-bg: #fcf8e3; // warning background
