--- a/src/less/common/forms.less
+++ b/src/less/common/forms.less
@@ -167,6 +167,34 @@ input[type="submit"]:hover, input[type="submit"]:focus, button.primary:hover,
     background: @submit-button-hover-focus-bg;
 }
 
+button.overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 0 0 0 4px;
+    border: none;
+    margin: 0;
+    color: @blog-text;
+    background-color: rgba(255, 255, 255, 0.5);
+    &:hover {
+        color: #222;
+    }
+}
+
+button.plus {
+    border: none;
+    padding: 0;
+    margin: 0;
+    height: 15px;
+    width: 15px;
+    font-size: 0;
+    float: right;
+        .plus(13px, 3px, @lib-panels-titles);
+    &:hover {
+        .plus(13px, 3px, @lib-panels-titles - 50);
+    }
+}
+
 .form-horizontal {
     //background: green;
     .clear;
