--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -112,7 +112,7 @@ blockquote {
 #modal-content {
     margin: 1em 0;
 }
-button.modal-close, button.close {
+button.modal-close {
     position: absolute;
     font-size: 30px;
     font-weight: 700;
