--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -96,6 +96,7 @@
         font-size: 0;
         //background: yellow;
         article {
+            position: relative;
             display: inline-block;
             box-sizing: border-box;
             margin: 0;
@@ -107,6 +108,14 @@
                     border: 1px solid #FFF;
                 }
             }
+            button {
+                display: none;
+                font-size: 20px;
+            }
+            &:hover button {
+                display: block;
+            }
+
             img {
                 display: inline-block;
                 vertical-align: middle;
@@ -190,19 +199,15 @@
                         max-height: 200px;
                     }
                 }
-                button.close {
+                button {
+                    line-height: 30px;
+                    padding: 0;
+                    font-size: 30px;
+                    height: 40px;
+                    width: 40px;
                     display: none;
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    border-radius: 0;
-                    color: @blog-text;
-                    background-color: rgba(255, 255, 255, 0.5);
-                    &:hover {
-                        color: #222;
-                    }
                 }
-                article:hover button.close {
+                article:hover button {
                     display: block;
                 }
 
