fix multiple small bugs.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -21,7 +21,7 @@
         }
     }
     #left-panel {
-        min-height: 100vh;
+        min-height: calc(~'100vh - 80px');
         position: absolute;
         top: 0;
         left: 0;
