--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -222,6 +222,17 @@
             font-style: italic;
             text-align: center;
         }
-
+    }
+    button.arrow {
+        text-indent: -9999px;
+        padding: none;
+        width: 9px;
+        height: 9px;
+        margin: 0;
+        float: right;
+        border: none;
+        &:after {
+            .arrow-down(@blog-hr, 9px, 11px)
+        }
     }
 }
