--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -44,9 +44,10 @@
         li {
             //margin: 1px 0;
             //text-indent: 10px;
+            position: relative;
         }
         a {
-            padding: 3px 10px;
+            padding: 3px 20px 3px 10px;
             display: block;
             text-indent: 25px;
             text-decoration: none;
@@ -221,18 +222,6 @@
             margin: 20px auto;
             font-style: italic;
             text-align: center;
-        }
-    }
-    button.arrow {
-        text-indent: -9999px;
-        padding: none;
-        width: 9px;
-        height: 9px;
-        margin: 0;
-        float: right;
-        border: none;
-        &:after {
-            .arrow-down(@blog-hr, 9px, 11px)
         }
     }
 }
