add css for librairy toolbar, improve edition form actions.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -86,6 +86,35 @@
         .basket-left {
             //border: 1px solid red;
         }
+        #toolbar {
+            padding: 5px 30px;
+            margin: 0;
+            border-bottom: 1px solid #CCC;
+            background: @lib-panels-bg;
+            line-height: 34px;
+            vertical-align: middle;
+            .title h2 {
+                display: inline;
+                font-weight: normal;
+                font-size: 100%;
+                color: @blog-text;
+            }
+            .selection, .title {
+                display: inline-block; 
+            }
+            .edition {
+                display: inline-block; 
+                margin: 0 15px;
+                button {
+                    margin: 0;
+                }
+            }
+            .right-bar {
+                display: inline; 
+                float: right;
+            }
+            .clear;
+        }
     }
     .thumb-wrapper {
         vertical-align: top;
