--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -452,8 +452,25 @@ hr {
     font-size: 1.3em;
     text-align: center;
     img {
+        @keyframes rotating {
+          from {
+            -ms-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -webkit-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+          }
+          to {
+            -ms-transform: rotate(360deg);
+            -moz-transform: rotate(360deg);
+            -webkit-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            transform: rotate(360deg);
+          }
+        }
         border: none;
-        margin-bottom: 30px
+        margin-bottom: 30px;
+        animation: rotating .6s steps(12) infinite;
     }
 }
 .red {
