replace lightbox previous and next arrows by a svg.

--- a/src/less/common/lightbox.less
+++ b/src/less/common/lightbox.less
@@ -54,13 +54,14 @@
     #lb-next {
         right: 0px;
         &:hover {
-            background: url("/assets/images/lb-next.png") right center no-repeat;
+            background: url("/assets/images/lightbox-arrow.svg") right center no-repeat;
         }
-}
+    }
     #lb-previous {
         left: 0px;
+        transform: rotate(180deg);
         &:hover {
-            background: url("/assets/images/lb-prev.png") left center no-repeat;
+            background: url("/assets/images/lightbox-arrow.svg") right center no-repeat;
         }
     }
     figure {
