--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -171,7 +171,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .accessibility {
     position: absolute !important;
-    display: none;
+    font-size: 0;
     text-indent: -500000px;
     width: 1px;
     height: 1px;
