add a button to edit post in situ, style delete button in edition forms.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -147,6 +147,10 @@ button.modal-close {
     text-align: center;
 }
 
+// administration links (edition buttons, etc.)
+.admin-links {
+    text-align: right;
+}
 // headings
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
