fix small things in styles.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -129,6 +129,7 @@
             position: relative;
             display: inline-block;
             box-sizing: border-box;
+            max-width: 100%;
             margin: 0;
             line-height: 0em;
             &.selected {
