--- a/src/less/weblog/layout.less
+++ b/src/less/weblog/layout.less
@@ -115,6 +115,7 @@
             font-size: 22px;
             height: 32px;
             float: right;
+            padding: 0 12px 0 8px;
             color: @blog-tag-color;
             &:hover, &:active {
                 color: @blog-tag-color-hover;
