--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -45,3 +45,12 @@
 @submit-button-hover-focus: #000; // submit and buttons :hover and :focus text color
 @submit-button-hover-focus-shadow: 0 0 3px #000; // submit and buttons :hover and :focus shadow
 @secondary-button-hover: #616161; // secondary submit buttons hover
+
+// tabs
+@tabs-border: #CCC; // borders of tabs
+@tabs-bg: #F9F9F9; // inactive tabs background
+@tabs-active-bg: #FFF; // active tab background
+@tabs-active: #000; // active tab text color
+@tabs: #575757; // unactive tab text color
+@tabs-hover: #222; // unactive tab hover and focus text color
+
