--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -221,6 +221,75 @@ h1, h2, h3, h4, h5, h6 {
     float: left;
 }
 
+// social icons
+.social-links {
+    text-align: center;
+    margin: 30px 0 0 0;
+}
+.social-icon {
+    display: inline-block;
+    margin: 0px 5px;
+    a {
+        border-radius: 5px;
+        display: block;
+        height: 32px;
+        width: 32px;
+        border: 1px solid @blog-hr;
+        box-sizing: border-box;
+        &:hover, &:focus {
+            border: none;
+        }
+    }
+}
+.facebook-link {
+    background: url("/assets/images/fb.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/fb-color.svg") center center no-repeat;
+    }
+}
+.twitter-link {
+    background: url("/assets/images/twitter.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/twitter-color.svg") center center no-repeat;
+    }
+}
+.gplus-link {
+    background: url("/assets/images/gplus.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/gplus-color.svg") center center no-repeat;
+    }
+}
+.flickr-link {
+    background: url("/assets/images/flickr.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/flickr-color.svg") center center no-repeat;
+    }
+}
+.vk-link {
+    background: url("/assets/images/vk.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/vk-color.svg") center center no-repeat;
+    }
+}
+.pinterest-link {
+    background: url("/assets/images/pinterest.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/pinterest-color.svg") center center no-repeat;
+    }
+}
+.px500-link {
+    background: url("/assets/images/500px.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/500px-color.svg") center center no-repeat;
+    }
+}
+.insta-link {
+    background: url("/assets/images/insta.svg") center center no-repeat;
+    &:hover, &:focus {
+        background: url("/assets/images/insta-color.png") center center no-repeat;
+    }
+}
+
 // white background generalities
 #weblog, #portfolios, #contact, #user, #librairy {
     color: @blog-text;
