improve focused input style.

--- a/src/less/common/forms.less
+++ b/src/less/common/forms.less
@@ -120,8 +120,6 @@ input[type="radio"], input[type="checkbox"] {
 
 input:hover, input:focus, textarea:focus, textarea:hover, select:focus, select:hover {
     box-shadow: @inputs-hover-focus-shadow;
-    border: @inputs-border-hover-focus;
-    
 }
 
 input[type="submit"], button {
@@ -146,7 +144,7 @@ input[type="submit"], button {
 
 button {
     background: none;
-    border: 1px solid @submit-button-bg;
+    border: 1px solid @blog-hr;
     color: @submit-button-bg;
 }
 
