improved modal layout.

--- a/src/less/common/forms.less
+++ b/src/less/common/forms.less
@@ -11,16 +11,11 @@ input, textarea, select, option, :invalid, :valid {
 }
 
 // default forms elements
-div.field_wrapper {
+div.field_wrapper, p.required-fields{
     margin-bottom: 1.5em;
 }
 
 form {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    p {
-        margin-bottom: 0.5em;
-    }
     .help-text {
         margin-top: 5px;
         margin-bottom: 5px;
