improve librairy uploader layout.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -215,6 +215,7 @@
         }
         .files-preview {
             margin: 22px;
+            padding: 0 8px 20px 0; 
             min-height: 180px;
             background-color: @lib-file-uploader-bg;
             border: 1px solid @blog-hr;
