improve modal footer, improve buttons style.

--- a/src/less/common/forms.less
+++ b/src/less/common/forms.less
@@ -121,11 +121,11 @@ input[type="submit"], button {
     font-family: @sans;
     font-weight: bold;
     display: inline-block;
-    border-radius: 4px;
-    box-shadow: @submit-button-shadow;
-    height: 34px;
+    border-radius: 2px;
+    box-shadow: none;
+    height: 38px;
     width: auto;
-    padding: 0 15px;
+    padding: 3px 23px;
     margin: 5px 2px 0 2px;
     text-align: center;
     &.small-button {
@@ -140,7 +140,7 @@ input[type="submit"], button {
 button {
     background: none;
     border: 1px solid @blog-hr;
-    color: @submit-button-bg;
+    color: @secondary-button;
 }
 
 button:hover, button:focus, a:hover button, a:focus button {
