--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -44,7 +44,8 @@
 @submit-button-hover-focus-bg: #575757; // submit and buttons :hover and :focus background
 @submit-button-hover-focus: #000; // submit and buttons :hover and :focus text color
 @submit-button-hover-focus-shadow: 0 0 3px #000; // submit and buttons :hover and :focus shadow
-@secondary-button-hover: #616161; // secondary submit buttons hover
+@secondary-button: #414141; // secondary buttons
+@secondary-button-hover: #414141; // secondary submit buttons hover
 
 // tabs
 @tabs-border: #CCC; // borders of tabs
