--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -84,7 +84,7 @@ blockquote {
     border: 1px solid @blog-hr;
     border-radius: 4px;
     box-shadow: 0 0 4px #000;
-    header#modal-header {
+    #modal-header {
         padding: 30px 60px;
         border-bottom: 1px solid @blog-hr;
         h1 {
@@ -99,7 +99,7 @@ blockquote {
         margin: 0;
         padding: 45px;
     }
-    footer {
+    #modal-footer {
         padding: 25px 45px 30px;
         border-top: 1px solid @blog-hr;
         text-align: right;
