--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -31,12 +31,13 @@
 @warning-background: rgba(214, 144, 25, 0.08);        // form's warning lists background
 @help-text: @blog-text; // help text color
 @inputs-bg: @blog-bg; // inputs (textarea, input etc.) background color
-@inputs-border: 1px solid #CCC; // inputs border
-@inputs-border-hover-focus: 1px solid #969696; // focus and hover inputs border
 @inputs-text-color: @blog-text; // inputs text color
-@inputs-hover-focus-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(150,150,150,.6); // inputs :hover and :focus shadow
+//@inputs-hover-focus-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(150,150,150,.6); // inputs :hover and :focus shadow
+@inputs-border: #CCC; // inputs border
+@inputs-border-hover: #969696;
+@inputs-border-focus: #414141;
 @submit-border-color: #CCC;
-@submit-button-border: 1px solid @submit-border-color; // submit and buttons border
+@submit-button-border: @submit-border-color; // submit and buttons border
 @submit-button-shadow: inset 0 1px 0 rgba(255,255,255,0.2); // submit and buttons shadow
 @submit-button: @blog-text; // submit and buttons text color
 @submit-button-main: #fff; // submit and buttons text color
