--- a/src/less/weblog/layout.less
+++ b/src/less/weblog/layout.less
@@ -84,11 +84,14 @@
     background: @inputs-bg;
     width: 100%;
     border-radius: 4px;
-    border: @inputs-border;
+    border: 1px solid @inputs-border;
     padding: 12px;
     box-sizing: border-box;
-    &:hover, &:focus {
-        box-shadow: @inputs-hover-focus-shadow;
+    &:hover {
+        border-color: @inputs-border-hover;
+    }
+    &:focus {
+        border-color: @inputs-border-focus;
     }
     input, input:hover, input:focus {
         box-shadow: none;
