fix a style bug with portfolio headers.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -446,7 +446,7 @@ hr {
                         padding: 0;
                         width: auto;
                         white-space: nowrap;
-                        display: inline-block;
+                        display: block;
                         position: relative;
                     }
 
