--- a/src/less/common/palette.less
+++ b/src/less/common/palette.less
@@ -34,8 +34,8 @@
 @inputs-text-color: @blog-text; // inputs text color
 //@inputs-hover-focus-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(150,150,150,.6); // inputs :hover and :focus shadow
 @inputs-border: #CCC; // inputs border
-@inputs-border-hover: #969696;
-@inputs-border-focus: #414141;
+@inputs-border-hover: #B1B1B1;
+@inputs-border-focus: #969696;
 @submit-border-color: #CCC;
 @submit-button-border: @submit-border-color; // submit and buttons border
 @submit-button-shadow: inset 0 1px 0 rgba(255,255,255,0.2); // submit and buttons shadow
