fix a style bug with portfolio headers

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -436,12 +436,12 @@ hr {
                 }
                 ul.sub-main-menu { // main menu sub-menu
                     background-color: @blog-bg;
-                    padding: 15px 20px;
+                    padding: 15px 20px 5px;
                     border: 1px solid @blog-hr;
                     border-radius: 3px;
                     text-align: left;
                     li {
-                        margin: 10px 0;
+                        margin: 10px 0 20px;
                         border: none;
                         padding: 0;
                         width: auto;
