Style weblog post edition previews.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -184,6 +184,11 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
+.underlined {
+    border-bottom: 1px solid @blog-hr;
+    padding: 10px 0;
+}
+
 .no-style, .no-style:hover, .no-style:active, .no-style:focus {
     outline: none;
     border: none;
