--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -10,7 +10,10 @@ body {
         overflow: hidden;
     }
 }
-
+// paragraphs
+p {
+    margin: 0.5em 0;
+}
 // emphasis
 em {
     font-style: italic;
@@ -32,10 +35,10 @@ article {
         list-style-type: decimal;
     }
 }
-pre {
+pre, blockquote {
     background-color: @blog-code-bg;
     border: @blog-code-border;
-    border-radius: 5px;
+    border-radius: 2px;
     padding: 1em 1.5em;
     margin: 1em 0;
     overflow: auto;
@@ -52,10 +55,12 @@ code {
     padding: 0px 5px;
 }
 blockquote {
-    padding-left: 1.5em;
-    line-height: 200%;
-    border-left: 4px solid #CCC;
-    border-radius: 4px;
+    color: @blog-code-text;
+    font-family: @serif;
+    font-weight: 400;
+    font-style: italic;
+    text-align: center;
+    padding: 30px;
 }
 
 #overlay, #modal-overlay {
@@ -469,10 +474,6 @@ hr {
         position: relative;
         max-width: 782px;
         margin: 1em auto 4em auto;
-        p {
-            margin-bottom: 0.5em;
-        }
-
     }
 }
 // Carousel (automatique, client side rendering)
