display collection headers in librairy left panel. add some css.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -38,8 +38,8 @@
             color: @lib-panels-titles;
             font-weight: bold;
         }
-        ul {
-            list-style-type: disc;
+        li ul {
+            padding-left: 20px;
         }
         li {
             //margin: 1px 0;
