add a title property to common state.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -79,7 +79,7 @@
     }
     #librairy-list {
         padding-bottom: 10px;
-        min-height: 100vh;
+        min-height: calc(~'100vh - 80px');
         .basket-right, .basket-left {
             box-sizing: border-box;
             position: absolute;
