add icons for portfolios and collections.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -49,9 +49,15 @@
             padding-left: 20px;
         }
         li {
-            //margin: 1px 0;
             //text-indent: 10px;
             position: relative;
+            &.collection {
+                list-style: inside url('/assets/images/dia.svg');
+            }
+            &.portfolio {
+                list-style: inside url('/assets/images/portfolio.svg');
+            }
+
         }
         a {
             padding: 3px 20px 3px 10px;
