add an icon for collections ensembles.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -57,7 +57,9 @@
             &.portfolio {
                 list-style: inside url('/assets/images/portfolio.svg');
             }
-
+            &.collection-ensemble {
+                list-style: inside url('/assets/images/folder.svg');
+            }
         }
         a {
             padding: 3px 20px 3px 10px;
