add icon for blog posts.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -60,6 +60,9 @@
             &.collection-ensemble {
                 list-style: inside url('/assets/images/folder.svg');
             }
+            &.post {
+                list-style: inside url('/assets/images/post.svg');
+            }
         }
         a {
             padding: 3px 20px 3px 10px;
