--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -116,10 +116,10 @@
                 font-size: 100%;
                 color: @blog-text;
             }
-            .selection, .title {
+            .selection, .title, {
                 display: inline-block; 
             }
-            .edition {
+            .edition, .single {
                 display: inline-block; 
                 margin: 0 15px;
                 button {
