--- a/src/less/librairy/palette.less
+++ b/src/less/librairy/palette.less
@@ -8,3 +8,5 @@
 @lib-context-menu-hover-bg: #CCC; // contextual menu hove focus and active links
 @lib-file-uploader-bg:  rgba(0,0,0,0.04); // file uploader drop area background
 @lib-file-uploader-bg-hover: rgba(0,0,0,0.08); // file uploader drop area background on dragover
+@lib-toolbar-icons: #717171;
+@lib-toolbar-icons-hover: #575757;
