improve librairy pictures detail layout.

--- a/src/less/librairy/layout.less
+++ b/src/less/librairy/layout.less
@@ -134,6 +134,16 @@
             //border: 1px solid red;
         }
     }
+    #librairy-detail {
+        article {
+            line-height: 0;
+            font-size: 0;
+            img {
+                display: block;
+                margin: 20px auto;
+            }
+        }
+    }
     .thumb-wrapper {
         vertical-align: top;
         position: relative;
