--- a/src/less/common/forms.less
+++ b/src/less/common/forms.less
@@ -25,7 +25,7 @@ form {
 input, option, select, textarea, ul.error-list li, ul.warning-list li {
     font-family: @sans;
     width: 100%;
-    border-radius: 4px;
+    border-radius: 2px;
     background: @inputs-bg;
     border: 1px solid @inputs-border;
     font-size: 1em;
@@ -59,7 +59,7 @@ textarea {
     resize: vertical;
     line-height: 1.5em;
 }
-input, option, select, button {
+input, option, button {
     height: 34px;
 }
 input[type="checkbox"] {
