add not found component.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -64,6 +64,21 @@ blockquote {
     padding: 30px;
 }
 
+article#not-found {
+    text-align: center;
+    h1 {
+        font-size: 150px;
+        margin-bottom: 20px;
+    }
+    h2 {
+        font-size: 25px;
+        font-style: italic;
+    }
+    p {
+        margin: 40px 10px;
+    }
+}
+
 #overlay, #modal-overlay {
     position: fixed;
     top: 0;
