improve weblog lists.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -64,7 +64,7 @@ blockquote {
     padding: 30px;
 }
 
-article#not-found {
+article#error-page {
     text-align: center;
     h1 {
         font-size: 150px;
