--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -530,6 +530,9 @@ hr {
         &.selected {
             opacity: 1;
         }
+        &.swaping {
+            opacity: 0;
+        }
     }
     img {
         display: block;
