--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -525,6 +525,7 @@ hr {
     line-height: 0;
     li {
         position: absolute;
+        max-height: 100%;
         box-sizing: border-box;
         opacity: 0.6;
         transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
@@ -533,6 +534,12 @@ hr {
         }
         &.swaping {
             opacity: 0;
+        }
+        button {
+            display: none;
+        }
+        &:hover button {
+            display: block;
         }
     }
     img {
