few change to carousel.

--- a/src/less/common/layout.less
+++ b/src/less/common/layout.less
@@ -525,7 +525,7 @@ hr {
     line-height: 0;
     li {
         position: absolute;
-        max-height: 100%;
+        display: inline;
         box-sizing: border-box;
         opacity: 0.6;
         transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
@@ -544,6 +544,7 @@ hr {
     }
     img {
         display: block;
+        max-height: 100%;
         position: relative;
     }
 }
