--- a/src/less/common/lightbox.less
+++ b/src/less/common/lightbox.less
@@ -66,7 +66,7 @@
     }
     figure {
         margin: 40px auto;
-        display: block;
+        display: inline-block;
         max-width: calc(~'100vw - 80px');
         max-height: @lb-max-height;
         .spinner img {
